# mcp-web-tools

./: Makefile  README.md  pyproject.toml
src/mcp_web_tools/: __init__.py  server.py  tools.py
tests/: test_tools.py
