[project]
name = "mcp-web-tools"
version = "0.1.0"
description = "MCP server providing web search and fetch tools for Claude Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.9.3",
    "hatchling>=1.28.0",
    "httpx>=0.28.1",
    "mcp>=1.23.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_web_tools"]

[project.scripts]
mcp-web-tools = "mcp_web_tools.server:main"
